--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,7 +10,7 @@ parameters:
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -32,6 +32,8 @@ framework:
 
 # Twig Configuration
 twig:
+    globals:
+        fos_csrf_provider: "@form.csrf_provider"
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
 
