--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "author": "NFQ",
   "repository": "",
   "devDependencies": {
+    "angular": "^1.5.2",
+    "bootstrap": "^3.3.6",
     "bower": "^1.6.3",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
-    "gulp-sass": "^2.0.4",
-    "gulp-uglify": "^1.4.2"
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.5.3",
+    "jquery": "^2.2.2",
+    "node-sass": "^3.4.2"
   }
 }
