Regime and Comments updates, sending Json, saving subcomments

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -30,5 +30,9 @@ app.showRegimes:
     path:     /showRegimes
     defaults: { _controller: AppBundle:Home:showRegimes}
 
+app.showComments:
+    path:     /showComments/{id}
+    defaults: { _controller: AppBundle:Comment:showComments}
+
 _user_bundle:
     resource: "@UserBundle/Resources/config/routing.yml"
