Register form template override, new atributes to User class, fixed issue with radio buttons

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -9,3 +9,8 @@ services:
          public: false
          tags:
              - { name: twig.extension }
+services:
+    app.form.registration:
+        class: UserBundle\Form\RegistrationType
+        tags:
+            - { name: form.type, alias: app_user_registration }
