--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,7 +7,11 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
-
+    
+services:
+    doctrine.dbal.mysql_platform:
+        class: Doctrine\DBAL\Platforms\MySqlPlatform
+        
 framework:
     #esi:             ~
     translator:      { fallbacks: ["%locale%"] }
@@ -47,6 +51,7 @@ doctrine:
         user:     "%database_user%"
         password: "%database_password%"
         charset:  UTF8
+        platform_service: doctrine.dbal.mysql_platform
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
         #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
