--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "jquery": "^2.2.2",
     "ng-infinite-scroll": "^1.1.2",
     "node-sass": "^3.4.2"
+  },
+  "dependencies": {
+    "gulp-if": "^2.0.0",
+    "gulp-ignore": "^2.0.1",
+    "gulp-uglifycss": "^1.0.6"
   }
 }
