Added search by difficulty

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -31,7 +31,7 @@ app.showRegimes:
     defaults: { _controller: AppBundle:Home:showRegimes}
 
 app.showRegimePage:
-    path:     /showRegimesPage/{page}/{sort}
+    path:     /showRegimesPage/{page}/{sort}/{difficulty}
     defaults: { _controller: AppBundle:Home:showRegimesPage}
 
 app.showProfile:
