--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -42,5 +42,8 @@ app.showComments:
     path:     /showComments/{id}
     defaults: { _controller: AppBundle:Comment:showComments}
 
+app.activateRegime:
+    path:     /activateRegime/{id}
+    defaults: { _controller: AppBundle:Home:activateRegime}
 _user_bundle:
     resource: "@UserBundle/Resources/config/routing.yml"
