--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "node-sass": "^3.4.2"
   },
   "dependencies": {
+    "angular-moment": "^1.0.0-beta.5",
     "gulp-if": "^2.0.0",
     "gulp-ignore": "^2.0.1",
-    "gulp-uglifycss": "^1.0.6"
+    "gulp-uglifycss": "^1.0.6",
+    "moment": "^2.13.0"
   }
 }
