--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -8,6 +8,9 @@ services:
         class: AppBundle\Service\Repo
         arguments: [ @doctrine.orm.entity_manager ]
 
+    app.formBuilder:
+        class: AppBundle\Service\FormBuilder
+
     app.twig_extension:
         class: AppBundle\Twig\DifficultyExtension
         public: false
