Added search by input

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -31,8 +31,8 @@ app.showWorkouts:
     defaults: { _controller: AppBundle:Home:showWorkouts}
 
 app.showWorkoutPage:
-    path:     /showWorkoutsPage/{page}/{sort}/{difficulty}
-    defaults: { _controller: AppBundle:Home:showWorkoutsPage}
+    path:     /showWorkoutsPage/{page}/{sort}/{difficulty}/{search}
+    defaults: { _controller: AppBundle:Home:showWorkoutsPage, search: 0}
 
 app.showProfile:
     path:     /showProfile/{id}
