Separated HomeController actions to 3 groups, fixed workout rating, created ActivateType form

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -4,23 +4,15 @@ app.index:
 
 app.users:
     path:     /users
-    defaults: { _controller: AppBundle:Home:browseUsers}
+    defaults: { _controller: AppBundle:User:browseUsers}
 
 app.createWorkout:
     path:     /createWorkout
-    defaults: { _controller: AppBundle:Home:createWorkout}
+    defaults: { _controller: AppBundle:Workout:createWorkout}
 
 app.showWorkout:
     path:     /workouts/{id}
-    defaults: { _controller: AppBundle:Home:showWorkout}
-
-app.taskSuccess:
-    path:     /success
-    defaults: { _controller: AppBundle:Home:taskSuccess}
-
-app.rateWorkout:
-    path:     /rating/{id}
-    defaults: { _controller: AppBundle:Home:rateWorkout}
+    defaults: { _controller: AppBundle:Workout:showWorkout}
 
 app.showWorkoutPage:
     path:     /showWorkoutsPage/{page}/{sort}/{difficulty}/{search}
@@ -28,14 +20,11 @@ app.showWorkoutPage:
 
 app.showProfile:
     path:     /showProfile/{id}
-    defaults: { _controller: AppBundle:Home:showProfile}
+    defaults: { _controller: AppBundle:User:showProfile}
 
 app.showComments:
     path:     /showComments/{id}
     defaults: { _controller: AppBundle:Comment:showComments}
 
-app.activateWorkout:
-    path:     /activateWorkout/{id}
-    defaults: { _controller: AppBundle:Home:activateWorkout}
 _user_bundle:
     resource: "@UserBundle/Resources/config/routing.yml"
