--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "angular-moment": "^1.0.0-beta.5",
+    "chart.js": "^2.0.2",
     "gulp-if": "^2.0.0",
     "gulp-ignore": "^2.0.1",
     "gulp-uglifycss": "^1.0.6",
