Added some tests, fixed redirect after registration

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,9 @@
 app:
     resource: @AppBundle/Resources/config/routing.yml
     type: yaml
+
+fos_user_registration_confirmed:
+    pattern: /
+    defaults: { _controller: AppBundle:Home:Index }
+    requirements:
+        _method: GET
