--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
-    "jquery": "^2.2.2",
+    "jquery": "~> 3.4.0",
     "ng-infinite-scroll": "^1.1.2",
     "node-sass": "^3.4.2"
   },
